May 29 2024
Added:
 school receptionist

 trash can
-----------------------------------------------------------------------------------------
May 26 2024
Added:
 hear the voices spell implementation

 the start of the mana system
 add_mana()
 sub_mana()
-----------------------------------------------------------------------------------------
May 23 2024
Added:
 the spell text for see into the past

 wispers of the touch spell implementation
Fixed:
 hallways not working with see into the past

 FirstRoom cancels spell
-----------------------------------------------------------------------------------------
May 20 2024
Added:
 beginning of see into the past spell

Bugs:
 the hallways are not working with the spell implementation
 
 FirstRoom returns 0 which cancels spell
-----------------------------------------------------------------------------------------
May 18 2024
Added:
 inspect person implementation
 enhanced insight implementation
-----------------------------------------------------------------------------------------
May 16 2024
Added:
 the beginning of the spell system
-----------------------------------------------------------------------------------------
May 15 2024
Added:
 mana to Entity
-----------------------------------------------------------------------------------------
May 13 2024
Fixed:
 when you start the game you can pickup the robe
 then re-enter the bathroom and pickup the robe again

 scenes now print before room text

Added:
 SchoolEntrance struct

Moved:
 all_scenes.rs to lib
-----------------------------------------------------------------------------------------
May 12 2024
Added:
 spells.rs

 spell_circle to Entity
 
 get_spell_lore()
 print_spell()

 get_circle_lore()
 print_circle()

 Stage struct

 Seat struct

 fourth_scene()

 interact_with_item()

 fifth_scene()
Removed:
 stats from Entity
-----------------------------------------------------------------------------------------
May 9 2024
Added: